package com.tp.commons.domain.donantes;

public enum Nivel {
    COLABORADOR,
    SOSTENEDOR,
    TRANSFORMADOR
}
