package com.tp.incentivos.controllers;

import com.tp.commons.dtos.incentivos.EvaluacionMisionResponseDTO;
import com.tp.incentivos.dtos.EntregaDonacionDTO;
import com.tp.incentivos.dtos.RankingItemDTO;
import com.tp.incentivos.services.IncentivosService;
import com.tp.incentivos.services.ServicioRanking;
import jakarta.validation.Valid;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.*;

import org.springframework.http.HttpStatus;
import java.util.List;

@RestController
@RequestMapping("/incentivos")
public class IncentivosController {

    private final IncentivosService service;
    private final ServicioRanking servicioRanking;

    public IncentivosController(IncentivosService service, ServicioRanking servicioRanking) {
        this.service = service;
        this.servicioRanking = servicioRanking;
    }

    @ExceptionHandler(IllegalArgumentException.class)
    public ResponseEntity<String> handleNotFound(IllegalArgumentException ex) {
        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(ex.getMessage());
    }

    /**
     * Recibe notificación del servicio-donaciones cuando una donación es entregada.
     * Procesa el impacto en métricas y misiones del donante.
     * POST /incentivos/entrega
     */
    @PostMapping("/entrega")
    public ResponseEntity<EvaluacionMisionResponseDTO> procesarEntrega(@Valid @RequestBody EntregaDonacionDTO dto) {
        EvaluacionMisionResponseDTO resultado = service.procesarNuevaEntrega(dto);
        return ResponseEntity.ok(resultado);
    }

    /**
     * Retorna el ranking global de donantes.
     * GET /incentivos/ranking
     */
    @GetMapping("/ranking")
    public ResponseEntity<List<RankingItemDTO>> obtenerRanking() {
        return ResponseEntity.ok(servicioRanking.obtenerRankingCompleto());
    }

    /**
     * Retorna la posición en el ranking de un donante específico.
     * GET /incentivos/ranking/{donanteId}

    @GetMapping("/ranking/{donanteId}")
    public ResponseEntity<RankingItemDTO> obtenerPosicionDonante(@PathVariable Integer donanteId) {
        return ResponseEntity.ok(servicioRanking.obtenerPosicionDonante(donanteId));
    }
     */
}
