@startuml incentivos
!include ../_style.puml

title Módulo servicio-incentivos\n(capas controllers / services / repositories / clients / domain, según el código)

skinparam componentStyle uml2

component "servicio-incentivos" as Modulo {

    package "controllers" {
        class IncentivosController <<Controller>> {
            +procesarEntrega(dto): EvaluacionMisionResponseDTO
            +obtenerRanking(): List<RankingItemDTO>
        }
    }

    package "services" {
        class IncentivosService <<Service>> {
            +procesarNuevaEntrega(dto): EvaluacionMisionResponseDTO
        }
        class ServicioRanking <<Service>> {
            +obtenerRankingCompleto(): List<RankingItemDTO>
        }
    }

    package "repositories" {
        class MisionRepository <<Repository>> {
            +findById(id): Mision
            +findSiguiente(misionActualId): Mision
        }
    }

    package "clients" {
        class DonacionesRestClient <<Client>> {
            +obtenerIndicadores(...): IndicadoresDonanteDTO
            +obtenerTodosDonantes(): List
            +obtenerDatosParaNotificar(id): NotificacionRequestDTO
        }
        class InsigniasRestClient <<Client>> {
            +notificarInsigniaObtenida(user, mision, desc)
        }
    }

    package "domain.misiones" {
        abstract class Mision {
            -id: Long
            -objetivo: int
            -nivel: Nivel
            -titulo: String
            -orden: int
            --
            +tieneSiguiente(): boolean
            +{abstract} calcularNuevoProgreso(entrega, indicadores): double
            +{abstract} estaCumplida(entrega, indicadores): boolean
        }
        class MisionRacha extends Mision
        class MisionCompletitud extends Mision
        class MisionHabilDonador extends Mision
        class MisionDonacionesExitosas extends Mision {
            +tieneSiguiente(): boolean
        }

        note top of Mision
            **Strategy / Template Method por herencia**: cada subclase
            define su regla de progreso y de cumplimiento; el servicio
            opera polimórficamente sobre la "misión actual" sin
            switch/instanceof.
        end note
    }
}

package "commons (módulo compartido)" #F7F7F7 {
    class Insignia {
        -titulo: String
        -descripcion: String
        -fechaObtencion: Date
    }
    enum Nivel {
        COLABORADOR
        SOSTENEDOR
        TRANSFORMADOR
    }
    class NotificacionRestClient <<Client>>
}

package "Sistemas externos" #EEEEEE {
    class "servicio-donaciones" as ExtDon <<external>>
    class "N8N — webhook insignias" as ExtN8N <<external>>
    class "servicio-notificaciones" as ExtNot <<external>>
}

' ===================== Cableado entre capas =====================
IncentivosController ..> IncentivosService : usa >
IncentivosController ..> ServicioRanking : usa >
IncentivosService ..> MisionRepository : consulta misiones >
IncentivosService ..> DonacionesRestClient : pide indicadores >
IncentivosService ..> InsigniasRestClient : notifica insignia >
IncentivosService ..> NotificacionRestClient : despacha notificación >
IncentivosService ..> Mision : evalúa cumplimiento >
ServicioRanking ..> DonacionesRestClient : lee donantes >
MisionRepository ..> Mision : cataloga >

' ===================== Dominio =====================
Mision "1" *-- "1" Insignia : insigniaAsociada
Mision --> Nivel : nivel

' ===================== Clients -> sistemas externos =====================
DonacionesRestClient ..> ExtDon : HTTP GET
InsigniasRestClient ..> ExtN8N : HTTP POST webhook
NotificacionRestClient ..> ExtNot : HTTP POST /notificar

legend right
    |= Color / estereotipo |= Significado |
    | <back:#EFF6FF>     </back> | Clase de dominio |
    | <<Controller>> | Capa de exposición REST |
    | <<Service>> | Capa de aplicación / negocio |
    | <<Repository>> | Persistencia en memoria |
    | <<Client>> | Cliente HTTP saliente (RestTemplate) |
    | <back:#F1F4E8>     </back> | Enum de dominio |
    | <back:#F7F7F7>     </back> | Módulo `commons` |
    | <<external>> | Servicio externo al módulo |
endlegend

@enduml
